added stat analysis part and added link

--- a/docs/2.1_Survey_Response_Regression.ipynb
+++ b/docs/2.1_Survey_Response_Regression.ipynb
@@ -249,7 +249,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Observation:**"
+    "**Observation:**\n",
+    "\n",
+    "According to Table 2, the coefficient for `attend_OH` is 0.096, which is within the 95% confidence interval (0.0176, 0.177) from the baseline model. According to Table 3, our ANOVA F-test also shows that adding the variable optional does not help improve our model. Therefore, variable `optional` is not a true confounding variable and we will not include `optional` in our final model."
    ]
   },
   {
@@ -378,7 +380,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Observation:**"
+    "**Observation:**\n",
+    "\n",
+    "According to Table 4, the coefficient for `attend_OH` is 0.111, which is within the 95% confidence interval (0.0176, 0.177) from the baseline model. According to Table 5, our ANOVA F-test also shows that adding the variable `stat` does not help improve our model. Therefore, variable `stat` is not a true confounding variable and we will not include `stat` in our final model."
    ]
   },
   {
@@ -507,8 +511,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Observation:**"
+    "**Observation:**\n",
+    "\n",
+    "According to Table 6, the coefficient for `attend_OH` is 0.087, which is within the 95% confidence interval (0.0176, 0.177) from the baseline model. According to Table 7, our ANOVA F-test also shows that adding the variable `program` does not help improve our model. Therefore, variable `program` is not a true confounding variable and we will not include `program` in our final model."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
