updated regression ipynb

--- a/docs/2.1_Survey_Response_Regression.ipynb
+++ b/docs/2.1_Survey_Response_Regression.ipynb
@@ -521,7 +521,12 @@
    "metadata": {},
    "source": [
     "### Conclusion\n",
-    "\n"
+    "\n",
+    "Based on our Exploratory Data Analysis (EDA), we decide to focus our empirical investigation on three confunding variables `optioanl`, `stat`, and `program`. However, after performing regression and F-test on these variables, we found that they are not true confounding variables and adding these three variables does not improve our model. \n",
+    "\n",
+    "Therefore, our final model is our baseline model $E(Y) = exp(\\beta_0 + \\beta_{\\text{attend_OH}}X_{\\text{attend_OH}})$.\n",
+    "\n",
+    "Since the p-value is 0.02 which is small enough, we can reject the null hypothesis under significance level of 0.05. Therefore, the number of times a MDS student attends office hours affects the average number of hours spent working on labs per week. The coefficient for `attend_OH` is 0.097, where exp(0.097) is the effect of attending office hours. This means on average, one visit increase in office hours is expected to increase hours spent on labs per week by 1.1 times.\n"
    ]
   },
   {
