--- a/docs/3_Final_Report.Rmd
+++ b/docs/3_Final_Report.Rmd
@@ -204,25 +204,26 @@ grid.arrange(optional, prog_plot, stats_plot, ncol=1)
 
 ## Regression Models
 
-Since our response variable is expected to be non-negative, we decide to analyze the survey results using regression with a log-link transformation. Our response variable `lab_hours` is expected to be bounded between 0 and 168 hours (i.e maximum hours per week). 
+Since our response variable is expected to be non-negative, we decided to analyze the survey results using regression with a log-link transformation. Our response variable `lab_hours` is expected to be bounded between 0 and 168 hours (i.e maximum hours per week). 
 
-According to our exploratory data analysis, three variables, `optional`, `stat`, and `program`, catch our attention and we believe they are potential confounding variables. Therefore, we will use these three variables, together with our explanatory variable `attend_OH` and response variable `lab_hours` for our model.
+According to our exploratory data analysis, three variables, `optional`, `stat`, and `program`, caught our attention and we believed they are potential confounding variables. Therefore, we used these three variables, together with our explanatory variable `attend_OH` and response variable `lab_hours` for our model.
 
-#### Baseline Model
+### Baseline Model
 
 $$E(Y) = exp(\beta_0 + \beta_{\text{attend_OH}}X_{\text{attend_OH}})$$
 
-Our baseline model is to regress `lab_hours` only on `attend_OH`. We will use this model as a reference to evaluate and compare other models.
+Our baseline model is to regress `lab_hours` only on `attend_OH`. We used this model as a reference to evaluate and compare other models.
 
 ```{r}
 base <- glm(lab_hours ~ attend_OH , data = df, family = gaussian(link = "log"))
 kable(tidy(base))
 ```
+
 *Table 1: Regression Coefficients for Baselien Model*
 
 According to Table 1, we can see the coefficient for `attend_OH` is 0.097 with p-value of 0.02 for our baseline model. The 95% confidence interval for $\beta_{\text{attend_OH}}$ is (0.0176, 0.177).
 
-#### Model 1 with Optional Questions
+### Model 1 with Optional Questions
 
 $$E(Y) = exp(\beta_0 + \beta_{\text{attend_OH}}X_{\text{attend_OH}}+\beta_{\text{optional}}X_{\text{optional}})$$
 
@@ -230,16 +231,18 @@ $$E(Y) = exp(\beta_0 + \beta_{\text{attend_OH}}X_{\text{attend_OH}}+\beta_{\text
 mod1 <- glm(lab_hours ~ attend_OH + optional, data = df, family = gaussian(link = "log"))
 kable(tidy(mod1))
 ```
+
 *Table 2: Regression Coefficients for Model 1 *
 
 ```{r}
 kable(tidy(anova(mod1, test= "F")))
 ```
+
 *Table 3: Comparison between Baseline Model and Model 1 *
 
 According to Table 2, the coefficient for `attend_OH` is 0.096, which is within the 95% confidence interval (0.0176, 0.177) from the baseline model. According to Table 3, our ANOVA F-test also shows that adding the variable optional does not help improve our model. Therefore, variable `optional` is not a true confounding variable and we will not include `optional` in our final model.
 
-#### Model 2 with Statistical Skills
+### Model 2 with Statistical Skills
 
 $$E(Y) = exp(\beta_0 + \beta_{\text{attend_OH}}X_{\text{attend_OH}}+\beta_{\text{stat}}X_{\text{stat}})$$
 
@@ -247,16 +250,18 @@ $$E(Y) = exp(\beta_0 + \beta_{\text{attend_OH}}X_{\text{attend_OH}}+\beta_{\text
 mod2 <- glm(lab_hours ~ attend_OH + stat, data = df, family = gaussian(link = "log"))
 kable(tidy(mod2))
 ```
+
 *Table 4: Regression Coefficients for Model 2*
 
 ```{r}
 kable(tidy(anova(mod2, test= "F")))
 ```
+
 *Table 5: Comparison between Baseline Model and Model 2*
 
 According to Table 4, the coefficient for `attend_OH` is 0.111, which is within the 95% confidence interval (0.0176, 0.177) from the baseline model. According to Table 5, our ANOVA F-test also shows that adding the variable `stat` does not help improve our model. Therefore, variable `stat` is not a true confounding variable and we will not include `stat` in our final model.
 
-#### Model 3 with Programming Skills
+### Model 3 with Programming Skills
 
 $$E(Y) = exp(\beta_0 + \beta_{\text{attend_OH}}X_{\text{attend_OH}}+\beta_{\text{program}}X_{\text{program}})$$
 
@@ -264,21 +269,22 @@ $$E(Y) = exp(\beta_0 + \beta_{\text{attend_OH}}X_{\text{attend_OH}}+\beta_{\text
 mod3 <- glm(lab_hours ~ attend_OH + program, data = df, family = gaussian(link = "log"))
 kable(tidy(mod3))
 ```
-*Table 6: Regression Coefficients for Model 3*
 
+*Table 6: Regression Coefficients for Model 3*
 
 ```{r}
 kable(tidy(anova(mod3, test= "F")))
 ```
+
 *Table 7: Comparison between Baseline Model and Model 3*
 
 According to Table 6, the coefficient for `attend_OH` is 0.087, which is within the 95% confidence interval (0.0176, 0.177) from the baseline model. According to Table 7, our ANOVA F-test also shows that adding the variable `program` does not help improve our model. Therefore, variable `program` is not a true confounding variable and we will not include `program` in our final model.
 
-#### Conclusion
+### Conclusion
 
 Based on our Exploratory Data Analysis (EDA), we decide to focus our empirical investigation on three confunding variables `optioanl`, `stat`, and `program`. However, after performing regression and F-test on these variables, we found that they are not true confounding variables and adding these three variables does not improve our model. 
 
-Therefore, our final model is our baseline model $E(Y) = exp(\beta_0 + \beta_{\text{attend_OH}}X_{\text{attend_OH}})$.
+Therefore, our final model is the baseline model $E(Y) = exp(\beta_0 + \beta_{\text{attend_OH}}X_{\text{attend_OH}})$.
 
 Since the p-value is 0.02 which is small enough, we can reject the null hypothesis under significance level of 0.05. Therefore, the number of times a MDS student attends office hours affects the average number of hours spent working on labs per week. The coefficient for `attend_OH` is 0.097, where exp(0.097) is the effect of attending office hours. This means on average, one visit increase in office hours is expected to increase hours spent on labs per week by 1.1 times.
 
